--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,12 +7,15 @@
   {{ content_for_header }}
   <link rel="stylesheet" href="{{ 'custom.css' | asset_url }}">
   <link rel="stylesheet" href="{{ 'style.css' | asset_url }}">
+  {{'header.css' |  asset_url |  stylesheet_tag}}
+  {{'cart.css' |  asset_url |  stylesheet_tag}}
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   {% section 'header' %}
+  {%  section 'slider' %} 
   {{ content_for_layout }}
   {% section 'footer' %}
   <script  defer src="{{ 'custom.js' | asset_url }}"></script>
