3rd iteration ended

--- a/sections/index.liquid
+++ b/sections/index.liquid
@@ -1,4 +1,79 @@
-<section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} <section>
   <div class="hero">
     <h1>Welcome to Our Store</h1>
     <p>Discover the best products available online</p>
@@ -41,4 +116,4 @@
       {% endfor %}
     </div>
   </div>
-</section>
+</section> {% endcomment %}
