--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -12,6 +12,7 @@
     {% form 'product', product %}
       <input type="hidden" name="id" value="{{ product.variants.first.id }}">
       <button type="submit">Add to Cart</button>
+      <h2>product templete</h2>
     {% endform %}
   </div>
 </div>
