--- a/sections/index.liquid
+++ b/sections/index.liquid
@@ -1,3 +1,7 @@
+<h2 class="main-pae-first-tittle">Our Best Sellers</h2>
+<div class="first-slide">
+  <img src="{{'left.png '}}" alt="">
+</div>
 
 
 
@@ -66,14 +70,9 @@
 
 
 
+{% comment %} 
 
-
-
-
-
-
-
-{% comment %} <section>
+<section>
   <div class="hero">
     <h1>Welcome to Our Store</h1>
     <p>Discover the best products available online</p>
@@ -116,4 +115,4 @@
       {% endfor %}
     </div>
   </div>
-</section> {% endcomment %}
+</section>  {% endcomment %}
