Your commit message

--- a/sections/index.liquid
+++ b/sections/index.liquid
@@ -1,6 +1,6 @@
 <h2 class="main-pae-first-tittle">Our Best Sellers</h2>
 <div class="first-slide">
-  <img src="{{'left.png '}}" alt="">
+  {% comment %} <img src="{{'left.png '}}" alt=""> {% endcomment %}
 </div>
 
 
